--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-        echo "Hello ${{ inputs.name }}"
-        echo "- in ${{ inputs.home }}"
+        echo "Hello $inputs.name"
+        echo "- in $inputs.home"
