--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-        echo "Hello ${{ name }}"
-        echo "- in ${{ home }}"
+        echo "Hello ${{ github.events.inputs.name }}"
+        echo "- in ${{ github.events.inputs.name.home }}"
