--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
     - run: |
         echo "Hello ${{ env.FRONTEND_URL }}"
+    - uses: actions/checkout@v2
     - uses: danielr1996/envsubst-action@1.1.0
       with:
         input: database.sql
