--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -33,4 +33,14 @@ jobs:
       with:
         name: dist
         path: Database
+        
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Deploy static site to S3 bucket
+      run: aws s3 sync ./Database s3://githubactionstestrd --delete
 
