--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -42,5 +42,5 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./Database s3://githubactionstestrd --delete
+      run: aws s3 sync . s3://githubactionstestrd --delete
 
