--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -47,7 +47,7 @@ jobs:
         dest: dist.zip
 
     - name: Deploy static site to S3 bucket
-      run:
+    - run: |
         aws s3 rm s3://githubactionstestrd --recursive
         aws s3 sync dist.zip s3://githubactionstestrd --delete
 
