--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -49,5 +49,5 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 rm s3://githubactionstestrd --recursive
-        aws s3 sync . s3://githubactionstestrd --delete
+        aws s3 sync dist.zip s3://githubactionstestrd --delete
 
