--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -47,7 +47,5 @@ jobs:
         dest: ./Dist/dist.zip
 
     - name: Deploy static site to S3 bucket
-      run: |
-        aws s3 rm s3://githubactionstestrd --recursive
-        aws s3 sync ./Dist s3://githubactionstestrd --delete
+      run: aws s3 sync ./Dist s3://githubactionstestrd --delete
 
