--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
+        pwd
         echo "Hello ${{ env.FRONTEND_URL }}"
         cat database.sql
     
